--- a/DM19-Lab2-Homework.ipynb
+++ b/DM19-Lab2-Homework.ipynb
@@ -554,6 +554,238 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The input data is json, so it has to be normalized first."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['tweet_id'] = json_normalize(df['_source'])['tweet.tweet_id']\n",
+    "data['text'] = json_normalize(df['_source'])['tweet.text']\n",
+    "data['hashtags'] = json_normalize(df['_source'])['tweet.hashtags']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![pic10.png](pics/pic10.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read emotion.csv, merge it and split it into train and test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "training dataset(with emotion)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![pic11.png](pics/pic11.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "testing dataset(without 'emotion')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![pic12.png](pics/pic12.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vectorize the dataset into bag of words. Extract the top 1000 ones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "BOW_1000 = TfidfVectorizer(max_features=1000, tokenizer=nltk.word_tokenize)\n",
+    "\n",
+    "BOW_1000.fit(train['text'])\n",
+    "BOW_1000.fit(test['text'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Apply the training and testing input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = BOW_1000.transform(train['text'])\n",
+    "\n",
+    "X_test = BOW_1000.transform(test['text'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Binarize the label \"emotion\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![pic13.png](pics/pic13.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I built a model of 2 hidden layers.\n",
+    "![pic14.png](pics/pic14.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I trained it with 5 epochs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![pic15.png](pics/pic15.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After the result came out:\n",
+    "![pic16.png](pics/pic16.png)\n",
+    "I decoded into the real \"emotion\":\n",
+    "![pic17.png](pics/pic17.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then I uploaded onto Kaggle and got the score of 0.43257\n",
+    "\n",
+    "Next I took anothor try\n",
+    "\n",
+    "As to the preprocessing, I used WordNetLemmatizer of NLTK to clean the sentences:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess(text):\n",
+    "  lemmatizer = WordNetLemmatizer()\n",
+    "  tokens = [lemmatizer.lemmatize(word) for word in word_tokenize(text) if word not in set(string.punctuation)]\n",
+    "  return tokens\n",
+    "\n",
+    "from tqdm import tqdm\n",
+    "tqdm.pandas()\n",
+    "main['Clean Text'] = main['Sentence'].progress_apply(lambda x: preprocess(x))\n",
+    "main['Clean Sentences'] = main['Clean Text'].apply(lambda x: ' '.join(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![pic18.png](pics/pic18.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then I built an RNN model with several layers:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_input = Input(shape=(50,), name='text_input')\n",
+    "psn_input = Input(shape=(1,), name='psn_input')\n",
+    "emb = Embedding(VOCABSIZE, embedding_dim, weights=[embedding_matrix], input_length=50)(text_input)\n",
+    "do1 = Dropout(0.5)(emb)\n",
+    "bilstm = Bidirectional(LSTM(128, return_sequences=True, dropout=0.5, recurrent_dropout=0.5))(do1)\n",
+    "# con = Conv1D(64, 3, activation = 'relu')(bilstm)\n",
+    "# gmp = GlobalMaxPool1D()(bilstm)\n",
+    "att = AttLayer(128)(bilstm)\n",
+    "combined = Concatenate()([att, psn_input])\n",
+    "combined = Dense(128, activation='relu')(combined)\n",
+    "combined = Dense(64, activation='relu')(combined)\n",
+    "# combined = Dropout(0.5)(combined)\n",
+    "combined = Dense(8, activation='sigmoid')(combined)\n",
+    "model = Model(inputs=[text_input, psn_input], outputs=[combined])\n",
+    "\n",
+    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy', f1_m])\n",
+    "\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![pic19.png](pics/pic19.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Actually it was already too complicated to train with. I trained with only 2 epochs and uploaded the result. The score was only 0.32, very disappoiting and I don't know why.Maybe too few epochs.\n",
+    "\n",
+    "Finally I tried different preprocessing. I removed punctuaion,tokenized the text, removed stop words, stemmed them and lemmatized them.\n",
+    "![pic20.png](pics/pic20.png)\n",
+    "Then I vectorized them with TF-IDF and trained them with multilayer perceptron classifier. The result is also only 0.38\n",
+    "\n",
+    "Comment: I should have spent more time so that I could have more trys"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
