--- a/DM19-Lab2-Homework.ipynb
+++ b/DM19-Lab2-Homework.ipynb
@@ -575,7 +575,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![pic10.png](pics/pic10.png)"
+    "![pic10.PNG](pics/pic10.PNG)"
    ]
   },
   {
