--- a/DM19-Lab2-Homework.ipynb
+++ b/DM19-Lab2-Homework.ipynb
@@ -596,7 +596,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![pic11.png](pics/pic11.png)"
+    "![pic11.PNG](pics/pic11.PNG)"
    ]
   },
   {
@@ -610,7 +610,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![pic12.png](pics/pic12.png)"
+    "![pic12.PNG](pics/pic12.PNG)"
    ]
   },
   {
@@ -662,7 +662,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![pic13.png](pics/pic13.png)"
+    "![pic13.PNG](pics/pic13.PNG)"
    ]
   },
   {
@@ -670,7 +670,7 @@
    "metadata": {},
    "source": [
     "I built a model of 2 hidden layers.\n",
-    "![pic14.png](pics/pic14.png)"
+    "![pic14.PNG](pics/pic14.PNG)"
    ]
   },
   {
@@ -684,7 +684,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![pic15.png](pics/pic15.png)"
+    "![pic15.PNG](pics/pic15.PNG)"
    ]
   },
   {
@@ -692,9 +692,9 @@
    "metadata": {},
    "source": [
     "After the result came out:\n",
-    "![pic16.png](pics/pic16.png)\n",
+    "![pic16.PNG](pics/pic16.PNG)\n",
     "I decoded into the real \"emotion\":\n",
-    "![pic17.png](pics/pic17.png)"
+    "![pic17.PNG](pics/pic17.PNG)"
    ]
   },
   {
@@ -729,7 +729,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![pic18.png](pics/pic18.png)"
+    "![pic18.PNG](pics/pic18.PNG)"
    ]
   },
   {
@@ -769,7 +769,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![pic19.png](pics/pic19.png)"
+    "![pic19.PNG](pics/pic19.PNG)"
    ]
   },
   {
@@ -779,7 +779,7 @@
     "Actually it was already too complicated to train with. I trained with only 2 epochs and uploaded the result. The score was only 0.32, very disappoiting and I don't know why.Maybe too few epochs.\n",
     "\n",
     "Finally I tried different preprocessing. I removed punctuaion,tokenized the text, removed stop words, stemmed them and lemmatized them.\n",
-    "![pic20.png](pics/pic20.png)\n",
+    "![pic20.PNG](pics/pic20.PNG)\n",
     "Then I vectorized them with TF-IDF and trained them with multilayer perceptron classifier. The result is also only 0.38\n",
     "\n",
     "Comment: I should have spent more time so that I could have more trys"
